finished title info binding and fixed overflow problems

--- a/app/content-enter/content-enter.component.css
+++ b/app/content-enter/content-enter.component.css
@@ -29,6 +29,10 @@ p {
     overflow-y: scroll;
 }
 
+.labelEnter {
+    overflow-y: scroll;
+}
+
 ::-webkit-scrollbar {
     width: 8px;
 }
